@@ -407,3 +407,4 @@ ManagePackages = "Manage packages"
 ManagePackagesDescription = "Manage your Chamilo packages"
 CacheHasBeenReset = "Cache has been reset"
 Application = "Application"
+GoogleAnalyticsTrackingId = "Google analytics tracking ID"
