@@ -406,3 +406,4 @@ ManagePackages = "Beheer packages"
 ManagePackagesDescription = "Beheer je Chamilo packages"
 AnnouncerComponent = "Systeem aankondingen"
 Application = "Applicatie"
+GoogleAnalyticsTrackingId = "Google analytics tracking ID"
