@@ -260,3 +260,4 @@
 [12/08/2016]
 
 * [Weblcms] Fixed course request denier
+* [Core] Added Google Analytics Tracking
